# GeSTure

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
data/: reference_samples.jsonl
docs/: algorithm_plan.md
jamo-recognition/: README.md
jamo-recognition/src/gesture_pipeline/: camera.py  cli.py  hangul.py  live_recognition.py  llm.py  pipeline.py  preview.py  recognizer.py  screen_check.py  session_store.py  virtual_skeleton.py
motor-control/: README.md
src/gesture_pipeline/: __init__.py  cli.py  config.py  dataset_capture.py  diagnostics.py  live_compose.py  llm.py  overlay.py  pipeline.py  recognizer.py  skeleton.py  types.py
virtual-hand-rigged-final/: README.md  index.html  package-lock.json  package.json  tsconfig.server.json
virtual-hand-rigged-final/client/src/: App.tsx
virtual-hand-rigged-final/client/src/components/: ConnectionStatus.tsx  FingerController.tsx  VirtualHand.tsx
virtual-hand-rigged-final/client/src/pages/: Controller.tsx  Display.tsx  Links.tsx  Recognition.tsx
virtual-hand-rigged-final/client/src/socket/: socket.ts  types.ts
virtual-hand-rigged-final/client/src/styles/: global.css
virtual-hand-rigged-final/scripts/: capture-display.mjs
virtual-hand-rigged-final/server/: binaryJamo.ts  index.ts
